Created web directory, totem view and JS requests. Made tweaks and fixes in the api